--- a/packages/ui-library/src/css/data-sets.scss
+++ b/packages/ui-library/src/css/data-sets.scss
@@ -4,7 +4,7 @@
         display: inline-block;
         border: 1px solid $color-rabbit-fur;
 
-        border-radius: 4p;
+        border-radius: 4px;
 
         .data-group {
             padding: 20px 0 10px;
