--- a/packages/ui-library/src/css/layout/_charts.scss
+++ b/packages/ui-library/src/css/layout/_charts.scss
@@ -194,8 +194,7 @@
     &.sel-17,
     &.sel-18,
     &.sel-19,
-    &.sel-20
-     {
+    &.sel-20 {
         &:after {
 
             content: '';
