--- a/packages/ui-library/src/css/searchbar.scss
+++ b/packages/ui-library/src/css/searchbar.scss
@@ -55,7 +55,7 @@ $searchbar-input-height: 38px;
     }
 
     &--open &__input {
-        box-shadow: 0 2px 3px rgba(0,0,0,0.1);
+        box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
     }
 
     &__filter-link {
