--- a/packages/ui-library/src/css/collapsible-section.scss
+++ b/packages/ui-library/src/css/collapsible-section.scss
@@ -103,7 +103,7 @@
             display: block;
             visibility: visible;
 
-            animation: fade-in 0.2s;
+            animation: 0.2s fade-in;
         }
     }
     &.has-title-value {
