Added show prop to ValidationMessages

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2422,6 +2422,11 @@ input[type=file] {
             margin-left: 5px;
         }
     }
+
+    &--show {
+        display: block;
+    }
+
     .message {
         padding: 3px 0;
     }
