--- a/packages/ui-library/src/css/forms/_file-input.scss
+++ b/packages/ui-library/src/css/forms/_file-input.scss
@@ -13,7 +13,7 @@
 
     &.input-file--selected {
         background-color: transparent;
-        &-fullWidth {
+        &-full-width {
             width: 100%;
             .input-file__field-set.unfocused {
                 margin-bottom: 0;
