[Cannonball] UIP-2920 MetaData Imports Template Classnames

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -303,6 +303,12 @@ button,
                 font-size: 11px;
             }
         }
+        &.clear {
+            &:before {
+                content: 'X';
+                font-size: 12px;
+            }
+        }
 
         &.small {
             $size: 21px;
