fixed for firefox

--- a/packages/ui-library/src/css/forms/_file-input.scss
+++ b/packages/ui-library/src/css/forms/_file-input.scss
@@ -43,6 +43,7 @@
     &__selected-content {
         display: inline-flex;
         align-items: center;
+        width: 100%;
     }
     &__info {
         display: flex;
