--- a/packages/ui-library/src/css/layout/_field-set.scss
+++ b/packages/ui-library/src/css/layout/_field-set.scss
@@ -6,6 +6,7 @@
     line-height: 1em;
     background-color: transparent;
     display: inline-flex;
+    flex-direction: column;
     padding: $spacing-md;
     @include font-pn-regular;
     @include break-word;
