--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -989,6 +989,8 @@ $color-grey-minor-1: $color-neutral-30;
     &__cancel-link {
         &.button {
             line-height: 36px;
+
+            @include font-pn-semibold;
         }
         margin: 0 $spacing-lg 0 $spacing-md;
     }
