--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -4,7 +4,7 @@ $icomoon-font-family: "iconfont"; // KEEP - designates name of font
 $icon-account: "\61";
 $icon-admin-account: "\74";
 $icon-alert: "\21";
-$icon-alert-solid: "\e901";
+$icon-alert-solid: "\e900";
 $icon-approve: "\70";
 $icon-apps: "\6c";
 $icon-as: "\e904";
@@ -18,7 +18,7 @@ $icon-bullet-list: "\e920";
 $icon-cabinet: "\24";
 $icon-calendar: "\43";
 $icon-cert-connection: "\e925";
-$icon-certificate: "\e902";
+$icon-certificate: "\e901";
 $icon-chat: "\e90e";
 $icon-chat-square: "\e918";
 $icon-circle: "\2e";
@@ -36,14 +36,14 @@ $icon-connection-status: "\e931";
 $icon-curly-braces: "\e921";
 $icon-delete: "\64";
 $icon-desktop: "\e916";
-$icon-details: "\e905";
+$icon-details: "\e902";
 $icon-device: "\e906";
 $icon-directory: "\3d";
 $icon-directory-hollow: "\23";
 $icon-docs: "\e927";
 $icon-download: "\44";
 $icon-dropdown-arrow: "\76";
-$icon-earth: "\e907";
+$icon-earth: "\e905";
 $icon-edit: "\65";
 $icon-error-triangle: "\e914";
 $icon-expand: "\45";
@@ -54,7 +54,7 @@ $icon-filter: "\66";
 $icon-fingerprint: "\e909";
 $icon-globe: "\a1";
 $icon-grip: "\47";
-$icon-group: "\e90b";
+$icon-group: "\e907";
 $icon-help: "\68";
 $icon-help-rounded: "\48";
 $icon-help-solid: "\e91e";
@@ -78,18 +78,18 @@ $icon-new-window: "\e91f";
 $icon-next: "\7d";
 $icon-nodes: "\e911";
 $icon-non-interactive: "\e91a";
-$icon-notepad: "\e90c";
+$icon-notepad: "\e90b";
 $icon-on-off: "\e910";
 $icon-org-chart: "\e915";
 $icon-overview: "\6f";
 $icon-pin: "\4e";
-$icon-play: "\e90d";
+$icon-play: "\e90c";
 $icon-plus: "\2b";
 $icon-plus-rounded: "\2a";
 $icon-population: "\e923";
 $icon-previous: "\7b";
 $icon-puzzle: "\7a";
-$icon-radar: "\e91b";
+$icon-radar: "\e90d";
 $icon-resend: "\72";
 $icon-resource: "\e922";
 $icon-right: "\3e";
@@ -98,8 +98,8 @@ $icon-saml: "\e930";
 $icon-search: "\73";
 $icon-server: "\20ac";
 $icon-settings: "\53";
+$icon-shield: "\e91b";
 $icon-signpost: "\e933";
-$icon-shield: "\e924";
 $icon-slider: "\7e";
 $icon-sort-asc: "\41";
 $icon-sort-desc: "\2200";
@@ -111,15 +111,15 @@ $icon-spinner: "\50";
 $icon-success: "\79";
 $icon-success-round: "\e92e";
 $icon-support: "\71";
-$icon-tag: "\e928";
-$icon-terminal: "\e92a";
-$icon-timer: "\e932";
+$icon-tag: "\e924";
+$icon-terminal: "\e928";
 $icon-thumb: "\54";
-$icon-twitter: "\e92d";
+$icon-timer: "\e932";
+$icon-twitter: "\e92a";
 $icon-undo: "\6e";
-$icon-unlink: "\e92f";
+$icon-unlink: "\e92d";
 $icon-user: "\75";
-$icon-user_directory: "\e934";
+$icon-user_directory: "\e92f";
 $icon-users: "\55";
 $icon-view: "\56";
 $icon-view-hidden: "\2f";
