--- a/packages/end-user/src/css/shared/_modal.scss
+++ b/packages/end-user/src/css/shared/_modal.scss
@@ -16,6 +16,11 @@
         top: 18px; // Padding in header
     }
 
+    &--open {
+        height: 100%;
+        overflow: hidden;
+    }
+
     &.show {
         .modal-content {
             display: inline-block;
