--- a/packages/end-user/src/css/styles.scss
+++ b/packages/end-user/src/css/styles.scss
@@ -16,6 +16,8 @@
 
 @import './global-vars';
 @import './fonts';
+@import './icons/_variables';
+@import './icons/_style';
 @import './text';
 @import './spacing';
 @import './mixins';
