Fixed linting and test errors

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -751,7 +751,7 @@ $color-grey-minor-1: $color-neutral-30;
         }
 
         .menu > .highlighted {
-            box-shadow: 0 -1px 0 $color-neutral-80;;
+            box-shadow: 0 -1px 0 $color-neutral-80;
         }
 
         .menu > .highlighted,
