--- a/packages/end-user/src/css/icons/_variables.scss
+++ b/packages/end-user/src/css/icons/_variables.scss
@@ -1,27 +1,23 @@
 $icomoon-font-family: "iconfont" !default;
 $icomoon-font-path: "./fonts/icons" !default;
 
-$icon-ghost-error: "\e93b";
-$icon-ghost-success: "\e93c";
-$icon-incomplete: "\e93e";
-$icon-mobile: "\e93f";
-$icon-hour-glass: "\e936";
-$icon-safe: "\e937";
-$icon-camera: "\e938";
-$icon-email: "\e939";
-$icon-ghost-disabled: "\e93a";
-$icon-ghost-timed-out: "\e93d";
-$icon-spinner: "\e940";
-$icon-download-box: "\e935";
-$icon-native-app: "\e900";
-$icon-signpost: "\e933";
-$icon-timer: "\e932";
-$icon-connection-status: "\e931";
-$icon-saml: "\e930";
+$icon-camera: "\e935";
+$icon-email: "\e936";
+$icon-ghost-disabled: "\e937";
+$icon-ghost-timed-out: "\e938";
+$icon-spinner: "\e939";
+$icon-error: "\e93a";
+$icon-hour-glass: "\e93b";
+$icon-safe: "\e93c";
+$icon-success: "\e93d";
+$icon-ghost-error: "\e93e";
+$icon-ghost-success: "\e93f";
+$icon-incomplete: "\e940";
+$icon-mobile: "\e941";
 $icon-account: "\61";
 $icon-admin-account: "\74";
 $icon-alert: "\21";
-$icon-alert-solid: "\e901";
+$icon-alert-solid: "\e900";
 $icon-approve: "\70";
 $icon-apps: "\6c";
 $icon-as: "\e904";
@@ -35,7 +31,7 @@ $icon-bullet-list: "\e920";
 $icon-cabinet: "\24";
 $icon-calendar: "\43";
 $icon-cert-connection: "\e925";
-$icon-certificate: "\e902";
+$icon-certificate: "\e901";
 $icon-chat: "\e90e";
 $icon-chat-square: "\e918";
 $icon-circle: "\2e";
@@ -49,17 +45,18 @@ $icon-cog: "\67";
 $icon-cog-filled: "\e919";
 $icon-cogs: "\e91c";
 $icon-collapse: "\63";
+$icon-connection-status: "\e931";
 $icon-curly-braces: "\e921";
 $icon-delete: "\64";
 $icon-desktop: "\e916";
-$icon-details: "\e905";
+$icon-details: "\e902";
 $icon-device: "\e906";
 $icon-directory: "\3d";
 $icon-directory-hollow: "\23";
 $icon-docs: "\e927";
 $icon-download: "\44";
 $icon-dropdown-arrow: "\76";
-$icon-earth: "\e907";
+$icon-earth: "\e905";
 $icon-edit: "\65";
 $icon-error-triangle: "\e914";
 $icon-expand: "\45";
@@ -70,7 +67,7 @@ $icon-filter: "\66";
 $icon-fingerprint: "\e909";
 $icon-globe: "\a1";
 $icon-grip: "\47";
-$icon-group: "\e90b";
+$icon-group: "\e907";
 $icon-help: "\68";
 $icon-help-rounded: "\48";
 $icon-help-solid: "\e91e";
@@ -88,31 +85,34 @@ $icon-lockout: "\e912";
 $icon-menu: "\6d";
 $icon-minus: "\2d";
 $icon-minus-rounded: "\5f";
+$icon-native-app: "\e934";
 $icon-network: "\25";
 $icon-new-window: "\e91f";
 $icon-next: "\7d";
 $icon-nodes: "\e911";
 $icon-non-interactive: "\e91a";
-$icon-notepad: "\e90c";
+$icon-notepad: "\e90b";
 $icon-on-off: "\e910";
 $icon-org-chart: "\e915";
 $icon-overview: "\6f";
 $icon-pin: "\4e";
-$icon-play: "\e90d";
+$icon-play: "\e90c";
 $icon-plus: "\2b";
 $icon-plus-rounded: "\2a";
 $icon-population: "\e923";
 $icon-previous: "\7b";
 $icon-puzzle: "\7a";
-$icon-radar: "\e91b";
+$icon-radar: "\e90d";
 $icon-resend: "\72";
 $icon-resource: "\e922";
 $icon-right: "\3e";
 $icon-robot: "\e926";
+$icon-saml: "\e930";
 $icon-search: "\73";
 $icon-server: "\20ac";
 $icon-settings: "\53";
-$icon-shield: "\e924";
+$icon-shield: "\e91b";
+$icon-signpost: "\e933";
 $icon-slider: "\7e";
 $icon-sort-asc: "\41";
 $icon-sort-desc: "\2200";
@@ -121,21 +121,21 @@ $icon-sp: "\7f";
 $icon-spin-down: "\30";
 $icon-spin-up: "\31";
 $icon-spinner1: "\50";
-$icon-success: "\79";
+$icon-success1: "\79";
 $icon-success-round: "\e92e";
 $icon-support: "\71";
-$icon-tag: "\e928";
-$icon-terminal: "\e92a";
+$icon-tag: "\e924";
+$icon-terminal: "\e928";
 $icon-thumb: "\54";
-$icon-twitter: "\e92d";
+$icon-timer: "\e932";
+$icon-twitter: "\e92a";
 $icon-undo: "\6e";
-$icon-unlink: "\e92f";
+$icon-unlink: "\e92d";
 $icon-user: "\75";
-$icon-user_directory: "\e934";
+$icon-user_directory: "\e92f";
 $icon-users: "\55";
 $icon-view: "\56";
 $icon-view-hidden: "\2f";
 $icon-walkthrough: "\4d";
 $icon-wand: "\57";
 $icon-welcome: "\77";
-
