--- a/packages/end-user/src/css/components/_spinner.scss
+++ b/packages/end-user/src/css/components/_spinner.scss
@@ -3,6 +3,15 @@
     display: block;
     margin: $spacing-xx 0;
     text-align: center;
+    height: 50px;
+    margin: $spacing-xx auto;
+    width: 50px;
+
+    &:has(div[class^="__icon"]) {
+        height: 0;
+        margin: 0;
+        width: 0;
+    }
 
     &__icon {
         &:after {
