--- a/packages/end-user/src/css/icons/_style.scss
+++ b/packages/end-user/src/css/icons/_style.scss
@@ -14,7 +14,7 @@
 
 $icon-font: 'iconfont';
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="icon-"]:not([class^="icon-feedback"]), [class*=" icon-"]:not([class^="icon-feedback"]) {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: '#{$icomoon-font-family}' !important;
   font-style: normal;
